<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Quiz Activity -->
    <string name="app_name">GeoQuiz</string>
    <string name="action_settings">Settings</string>

    <!-- TextViews -->
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>

    <!-- Buttons -->
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Prev</string>

    <!-- Toasts -->
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="no_more_previous_toast">This is the first question.</string>
    
    
    <!-- Cheat Activity -->
    <string name="title_activity_cheat">CheatActivity</string>
    <!-- TextViews -->
    <string name="warning_text">Are you sure you want to do this?</string>

    <!-- Buttons -->
    <string name="cheat_button">Cheat!</string>
    <string name="show_answer_button">Show Answer</string>

    <!-- Toasts -->
    <string name="judgment_toast">Cheating is wrong.</string>
    
</resources>
