<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" 
     >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/question_TextView"
        android:padding="24dp"/>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    
        android:id="@+id/true_button"
        android:text="@string/true_button"/>
        
         <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    
        android:id="@+id/false_button"
        android:text="@string/false_button"/>
        
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
     
      <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    
        android:id="@+id/previous_button"
        android:text="@string/previous_button"
        android:drawableStart="@drawable/arrow_left"
        android:drawableLeft="@drawable/arrow_left"
        android:drawablePadding="4dp"/> 
          
		<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    
        android:id="@+id/cheat_button"
        android:text="@string/cheat_button" />
    
		<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    
        android:id="@+id/next_button"
        android:text="@string/next_button"
        android:drawableEnd="@drawable/arrow_right"
        android:drawableRight="@drawable/arrow_right"
        android:drawablePadding="4dp"/>
    
     <!--  <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    
        android:id="@+id/previous_imageButton"
        android:src="@drawable/arrow_left"
        android:contentDescription="@string/previous_button"/>
     
      <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    
        android:id="@+id/next_imageButton"
        android:src="@drawable/arrow_right"
        android:contentDescription="@string/next_button"/>-->  
      
    </LinearLayout>
</LinearLayout>